<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Email"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="52sp"
                android:layout_marginTop="10sp"
                android:paddingStart="10sp"
                android:hint="example@gmai.com"
                android:background="@drawable/textview_border" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:text="@string/email_access"
                android:textColor="@color/lGray"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="Phone Number"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="52sp"
                android:layout_marginTop="10sp"
                android:paddingStart="10sp"
                android:hint="+91 9316344795"
                android:inputType="number"
                android:background="@drawable/textview_border" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:text="@string/mobile_access"
                android:textColor="@color/lGray"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:text="@string/tAndc"
            android:textColor="@color/button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:text="Upadate Details"
            android:textSize="20sp"
            android:backgroundTint="@color/button"
            android:onClick="next"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>